--- a/ParticleGenerator/ParticleGenerator.csproj
+++ b/ParticleGenerator/ParticleGenerator.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SharpQuill\SharpQuill.csproj" />
+  </ItemGroup>
+
 </Project>
